added vcflib (submodule)

--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,21 @@
 *.xcsettings
 *.xcuserstate
 *.xcodeproj
-*.1
+*.1dump.o
+examples.o
+fastq.o
+getSeeds.o
+ghash.o
+gliamodels.o
+gsw.o
+jsoncpp.o
+main.o
+matrices.o
+nodealign.o
+parameters.o
+seqtools.o
+show.o
+traceback.o
+dump.o
+clia
+*~
