--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "vcflib"]
 	path = vcflib
 	url = git://github.com/ekg/vcflib.git
+[submodule "fastahack"]
+	path = fastahack
+	url = git://github.com/ekg/fastahack.git
