added bamtools (submodule)

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "fastahack"]
 	path = fastahack
 	url = git://github.com/ekg/fastahack.git
+[submodule "bamtools"]
+	path = bamtools
+	url = git://github.com/pezmaster31/bamtools.git
