--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 *.xcsettings
 *.xcuserstate
 *.xcodeproj
+gswcmd
 *.1dump.o
 examples.o
 fastq.o
@@ -20,6 +21,7 @@ seqtools.o
 show.o
 traceback.o
 dump.o
+*.o
 clia
 *~
 libbamtools.a
