--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,1 @@
-*.xcworkspacedata
-*.xcuserstate
-*.DS_Store
-*.xcsettings
-*.xcuserstate
-*.xcodeproj
-gswcmd
-gsw
-*.1dump.o
-examples.o
-fastq.o
-getSeeds.o
-ghash.o
-gliamodels.o
-gsw.o
-jsoncpp.o
-main.o
-matrices.o
-nodealign.o
-parameters.o
-seqtools.o
-show.o
-traceback.o
-dump.o
-*.o
-clia
-*~
-libbamtools.a
-split.o
-test
+glia
