--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "rapidjson"]
 	path = rapidjson
 	url = https://github.com/kennytm/rapidjson.git
+[submodule "gssw"]
+	path = gssw
+	url = https://github.com/ekg/gssw.git
